[project]
name = "zoho-apollo"
version = "0.1.0"
description = "Real-time enrichment micro-service connecting Zoho CRM with Apollo.io"
authors = [
    {name = "Aditya Poddar"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "mysql-connector-python (>=9.3.0,<10.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]
packages = [{ include = "app" }]
[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
alembic = "^1.16.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
